--- a/example-app/src/index.html
+++ b/example-app/src/index.html
@@ -10,15 +10,16 @@
     <meta name="format-detection" content="telephone=no" />
   </head>
   <body>
-    <main>
+    <main style="text-align: center; padding-top: 50px;">
       <h1>Capacitor Test Plugin Project</h1>
-      <p>
-        This project can be used to test out the functionality of your plugin. Nothing in the
-        <em>example-app/</em> folder will be published to npm when using this template, so you can create away!
-      </p>
-      <label for="echoInput">Echo Text:</label>
-      <input type="text" id="echoInput" name="echoInput" value="Hello World!" />
-      <button onclick="testEcho()">Click Me!</button>
+
+      <button onclick="startCamera()">Start Camera</button>
+
+      <button onclick="stopCamera()">Stop Camera</button>
+
+      <button onclick="capture()">Take Picture</button>
+
+      <button onclick="switchCamera()">Switch Camera</button>
     </main>
 
     <script src="./js/example.js" type="module"></script>
