feat(example-app): add proper example app for testing

--- a/example-app/src/index.html
+++ b/example-app/src/index.html
@@ -1,27 +1,26 @@
-<!doctype html>
-<html lang="en" dir="ltr" class="hydrated">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Example Capacitor App</title>
-    <meta
-      name="viewport"
-      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <meta name="format-detection" content="telephone=no" />
-  </head>
-  <body>
-    <main style="text-align: center; padding-top: 50px;">
-      <h1>Capacitor Test Plugin Project</h1>
+<!DOCTYPE html>
+<html lang="en">
 
-      <button onclick="startCamera()">Start Camera</button>
+<head>
+  <meta charset="utf-8" />
+  <title>Ionic App</title>
 
-      <button onclick="stopCamera()">Stop Camera</button>
+  <base href="/" />
 
-      <button onclick="capture()">Take Picture</button>
+  <meta name="color-scheme" content="light dark" />
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="msapplication-tap-highlight" content="no" />
 
-      <button onclick="switchCamera()">Switch Camera</button>
-    </main>
+  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
-    <script src="./js/example.js" type="module"></script>
-  </body>
+  <!-- add to homescreen for ios -->
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+</head>
+
+<body>
+  <app-root></app-root>
+</body>
+
 </html>
